--- a/src/input.css
+++ b/src/input.css
@@ -126,8 +126,8 @@ html {
     4px
     transparent;
   background-image: linear-gradient(
-      #0f172a,
-      #0f172a
+      #212121,
+      #212121
     ),
     linear-gradient(
       137.48deg,
@@ -602,5 +602,3 @@ strong {
     );
   }
 }
-
-/* tombol next blok */
